# django_birthday_map

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  biome.jsonc  docker-compose.yml  entrypoint.sh  justfile  manage.py  pyproject.toml  requirements.txt
django_birthday_map/: asgi.py  settings.py  urls.py  wsgi.py
events/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py
events/static/css/: events_map.css
events/static/js/: events_map.js
events/templates/: events_map.html
events/templates/events/: events_map.html
tests/events/: conftest.py  test_admin.py  test_api.py  test_models.py  test_view.py
