[project]
name = "django-birthday-map"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.4",
    "django-environ==0.12.0",
    "django-extensions==4.1",
    "djangorestframework-gis==1.2.0",
    "psycopg[binary]==3.2.9",
]


[dependency-groups]
dev = [
    # Data generation
    "model-bakery==1.20.5",
    # Testing
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-django==4.11.1",
]


[tool.coverage.html]
show_contexts = true

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
data_file = ".coverages/.coverage"
disable_warnings = ["no-data-collected"]
dynamic_context = "test_function"
omit = [
    ".venv/*",
    "django_birthday_map/asgi.py",
    "django_birthday_map/wsgi.py",
    "manage.py",
    "venv/*",
]
parallel = true
source = ["."]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_birthday_map.settings"
